--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button class="btn btn-number">7</button>
       <button class="btn btn-number">8</button>
       <button class="btn btn-number">9</button>
-      <button class="btn btn-operation btn-multiplication">X</button>
+      <button class="btn btn-operation btn-multiplication">x</button>
       <button class="btn btn-number">4</button>
       <button class="btn btn-number">5</button>
       <button class="btn btn-number">6</button>
